Add day 19,20,21